<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollLayout_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:text="@string/input_text"/>

            <EditText
                android:id="@+id/textArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:maxLines="4"
                android:minLines="4"
                android:gravity="start"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                app:backgroundTint="@color/colorPrimaryDark"
                android:background="@drawable/edittext_bg"
                android:scrollbars="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_execute_check_"
                    style="@style/CustomButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/addwidget_bt"
                    android:layout_marginEnd="2dp"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button_clear"
                    style="@style/CustomButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/clear_bt"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button_lang"
                    style="@style/CustomButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/lang_bt"
                    android:layout_marginStart="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:text="@string/select_image"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:background="#FFFFFF"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:background="#FFFFFF"
                    android:layout_weight="0.6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                </androidx.viewpager.widget.ViewPager>

                <Button
                    android:id="@+id/nextBtn"
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:text=">"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:background="#FFFFFF"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:text="@string/select_sizetext" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:max="45"
                android:progress="45" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:text="@string/select_colortext" />

            <Spinner
                android:id="@+id/spinner_colortext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_border"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" >
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:text="@string/select_colorback" />

            <Spinner
                android:id="@+id/spinner_colorback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_border"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" >
            </Spinner>

            <Button
                android:id="@+id/button_about"
                style="@style/CustomButton"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/about_bt"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>